--- a/public/index.html
+++ b/public/index.html
@@ -797,7 +797,7 @@
                           dataType: "text",
                           success: function (text) {
                             //console.log(text)
-                            document.getElementById("china").innerText = text
+                            document.getElementById("china").innerText = text + "명"
                             infected = text;
                             console.log(infected)
                             //document.write(text)
@@ -810,8 +810,34 @@
                       <a id="china"></a>
                     </span></h4>
                   <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 84%" aria-valuenow="20"
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 76%" aria-valuenow="20"
                       aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+
+                  <h4 class="small font-weight-bold">이탈리아<span class="float-right">
+                      <script type="text/javascript" language="javascript">
+                        $.ajax({
+                          type: "GET",
+                          url: "https://corona-data.herokuapp.com/italy",
+                          dataType: "text",
+                          success: function (text) {
+                            //console.log(text)
+                            document.getElementById("italy").innerText = text + "명"
+                            infected = text;
+                            console.log(infected)
+                            //document.write(text)
+                          },
+                          error: function (xhr, status, error) {
+                            console.log(error)
+                          }
+                        })
+                      </script>
+                      <a id="italy"></a>
+                    </span></h4>
+
+                  <div class="progress mb-4">
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 8.6%" aria-valuenow="40"
+                      aria-valuemin="0" aria-valuemax="6"></div>
                   </div>
 
                   <h4 class="small font-weight-bold">한국<span class="float-right">
@@ -822,7 +848,7 @@
                           dataType: "text",
                           success: function (text) {
                             //console.log(text)
-                            document.getElementById("kor").innerText = text
+                            document.getElementById("korea").innerText = text + "명"
                             infected = text;
                             console.log(infected)
                             //document.write(text)
@@ -832,12 +858,11 @@
                           }
                         })
                       </script>
-                      <a id="kor"></a>
+                      <a id="korea"></a>
                     </span></h4>
-
                   <div class="progress mb-4">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 7.1%" aria-valuenow="40"
-                      aria-valuemin="0" aria-valuemax="6"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 7.1%" aria-valuenow="60"
+                      aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
 
                   <h4 class="small font-weight-bold">이란<span class="float-right">
@@ -848,7 +873,7 @@
                           dataType: "text",
                           success: function (text) {
                             //console.log(text)
-                            document.getElementById("iran").innerText = text
+                            document.getElementById("iran").innerText = text + "명"
                             infected = text;
                             console.log(infected)
                             //document.write(text)
@@ -861,32 +886,7 @@
                       <a id="iran"></a>
                     </span></h4>
                   <div class="progress mb-4">
-                    <div class="progress-bar" role="progressbar" style="width: 4.9%" aria-valuenow="60"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-
-                  <h4 class="small font-weight-bold">이탈리아<span class="float-right">
-                      <script type="text/javascript" language="javascript">
-                        $.ajax({
-                          type: "GET",
-                          url: "https://corona-data.herokuapp.com/italy",
-                          dataType: "text",
-                          success: function (text) {
-                            //console.log(text)
-                            document.getElementById("italy").innerText = text
-                            infected = text;
-                            console.log(infected)
-                            //document.write(text)
-                          },
-                          error: function (xhr, status, error) {
-                            console.log(error)
-                          }
-                        })
-                      </script>
-                      <a id="italy"></a>
-                    </span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 4.8%" aria-valuenow="80"
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 7%" aria-valuenow="80"
                       aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
 
