--- a/public/test.html
+++ b/public/test.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>마커 클러스터러 사용하기</title>
-    
-</head>
-<body>
-<div id="map" style="width:100%;height:350px;"></div>
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
-<script>
-    var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
-        center : new kakao.maps.LatLng(36.2683, 127.6358), // 지도의 중심좌표 
-        level : 14 // 지도의 확대 레벨 
-    });
- 
-    // 데이터를 가져오기 위해 jQuery를 사용합니다
-    // 데이터를 가져와 마커를 생성하고 클러스터러 객체에 넘겨줍니다
-    $.get("/data/pharmacy.json", function(data) {
-        // 데이터에서 좌표 값을 가지고 마커를 표시합니다
-        // 마커 클러스터러로 관리할 마커 객체는 생성할 때 지도 객체를 설정하지 않습니다
-        var markers = $(data.position).map(function(i, position) {
-            return new kakao.maps.Marker({
-                position : new kakao.maps.LatLng(position.lat, position.lng)
-            });
-        });
-    });
-</script>
+<head>
+	<meta charset="utf-8">
+	<title>마커 클러스터러 사용하기</title>
+
+</head>
+
+<body>
+	<div id="map" style="width:100%;height:350px;"></div>
+
+	<script type="text/javascript"
+		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
+	<script>
+		var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
+			center: new kakao.maps.LatLng(36.2683, 127.6358), // 지도의 중심좌표 
+			level: 14 // 지도의 확대 레벨 
+		});
+
+		var imageSize = new kakao.maps.Size(24, 35);
+
+		// 마커 이미지를 생성합니다    
+		var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
+		// 데이터를 가져오기 위해 jQuery를 사용합니다
+		// 데이터를 가져와 마커를 생성하고 클러스터러 객체에 넘겨줍니다
+		$.get("/data/pharmacy.json", function (data) {
+			$.each(data, function (i, data) {
+				for (var num = 0; num <= data.position.length; num++) {
+					var marker = new kakao.maps.Marker({
+						map: map, // 마커를 표시할 지도
+						title: data.position[i].title, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
+						image: markerImage // 마커 이미지 
+					});
+				}
+			})
+		});
+	</script>
 </body>
+
 </html>
