--- a/public/test.html
+++ b/public/test.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>마커 클러스터러 사용하기</title>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 </head>
 
