--- a/public/test.html
+++ b/public/test.html
@@ -24,7 +24,7 @@
 			$.each(data, function(i, data){
 				var marker = new kakao.maps.Marker({
 					map: map,
-					position: new kakao.map.LatLng(data.position.lat, data.position.lng)
+					position: new kakao.maps.LatLng(data.position.lat, data.position.lng)
 				})
 			})
 		});
