--- a/public/test.html
+++ b/public/test.html
@@ -26,7 +26,7 @@
 			dataType: "text",
 			success: function (text) {
 				console.log(text)
-				for(var i; i < text.position.length; i++){
+				for(var i; i < 700; i++){
 					var markers = new kakao.maps.Markers({
 						map: map,
 						position: new kakao.maps.LatLng(text.position.lat, text.position.lng)
