--- a/public/test.html
+++ b/public/test.html
@@ -29,16 +29,13 @@
     // 데이터를 가져오기 위해 jQuery를 사용합니다
     // 데이터를 가져와 마커를 생성하고 클러스터러 객체에 넘겨줍니다
     $.get("data/pharmacy.json", function(data) {
-        // 데이터에서 좌표 값을 가지고 마커를 표시합니다
-        // 마커 클러스터러로 관리할 마커 객체는 생성할 때 지도 객체를 설정하지 않습니다
-        var markers = $(data.positions).map(function(i, position) {
-            return new kakao.maps.Marker({
-                position : new kakao.maps.LatLng(position.lat, position.lng)
-            });
-        });
-
-        // 클러스터러에 마커들을 추가합니다
-        clusterer.addMarkers(markers);
+		for(var i = 0; i < data.position.length; i++){
+			var marker_position = new kakao.maps.LatLng(data.position[i].lat, data.position[i].lng);
+			var marker = new kakao.maps.Marker({
+				map: map,
+				position: marker_position
+			})
+		}
     });
 	</script>
 </body>
