--- a/public/test.html
+++ b/public/test.html
@@ -12,31 +12,31 @@
 	<div id="map" style="width:100%;height:350px;"></div>
 
 	<script type="text/javascript"
-		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49&libraries=clusterer"></script>
+		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
 	<script>
-    var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
-        center : new kakao.maps.LatLng(36.2683, 127.6358), // 지도의 중심좌표 
-        level : 14 // 지도의 확대 레벨 
-    });
-    
-    // 마커 클러스터러를 생성합니다 
-    var clusterer = new kakao.maps.MarkerClusterer({
-        map: map, // 마커들을 클러스터로 관리하고 표시할 지도 객체 
-        averageCenter: true, // 클러스터에 포함된 마커들의 평균 위치를 클러스터 마커 위치로 설정 
-        minLevel: 15 // 클러스터 할 최소 지도 레벨 
-    });
- 
-    // 데이터를 가져오기 위해 jQuery를 사용합니다
-    // 데이터를 가져와 마커를 생성하고 클러스터러 객체에 넘겨줍니다
-    $.get("data/pharmacy.json", function(data) {
-		for(var i = 0; i < data.position.length; i++){
-			var marker_position = new kakao.maps.LatLng(data.position[i].lat, data.position[i].lng);
-			var marker = new kakao.maps.Marker({
-				map: map,
-				position: marker_position
-			})
-		}
-    });
+		var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
+			center: new kakao.maps.LatLng(36.2683, 127.6358), // 지도의 중심좌표 
+			level: 14 // 지도의 확대 레벨 
+		});
+
+		$.ajax({
+			type: "GET",
+			url: "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/stores/json",
+			dataType: "json",
+			success: function (data) {
+				$.each(data.storeInfos, function(i,position){
+					var marker_position = new kakao.maps.LatLng(position.lat, position.lng);
+					var marker = new kakao.maps.Marker({
+						map: map,
+						position: marker_position
+					})
+				})
+			},
+			error: function (xhr, status, error) {
+				console.log(error)
+			}
+		});
+
 	</script>
 </body>
 
