--- a/public/test.html
+++ b/public/test.html
@@ -24,12 +24,14 @@
 			url: "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/stores/json",
 			dataType: "json",
 			success: function (data) {
-				$.each(data.storeInfos, function(i,position){
-					var marker_position = new kakao.maps.LatLng(position.lat, position.lng);
-					var marker = new kakao.maps.Marker({
-						map: map,
-						position: marker_position
-					})
+				$.each(data.storeInfos, function (i, position) {
+					if (position.type == "01") {
+						var marker_position = new kakao.maps.LatLng(position.lat, position.lng);
+						var marker = new kakao.maps.Marker({
+							map: map,
+							position: marker_position
+						})
+					}
 				})
 			},
 			error: function (xhr, status, error) {
