--- a/public/test.html
+++ b/public/test.html
@@ -11,8 +11,7 @@
 <body>
 	<div id="map" style="width:100%;height:350px;"></div>
 
-	<script type="text/javascript"
-		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
 	<script>
 		var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
 			center: new kakao.maps.LatLng(36.2683, 127.6358), // 지도의 중심좌표 
@@ -34,8 +33,7 @@
 							position: marker_position,
 							clickable: true
 						})
-
-						var iwContent = '<div style="padding:5px;">position.name</div><br>position.stock_at</br>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+						var iwContent = '<div style="padding:5px;">test</div><br></br>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
 							iwRemoveable = true; // removeable 속성을 ture 로 설정하면 인포윈도우를 닫을 수 있는 x버튼이 표시됩니다
 						var infowindow = new kakao.maps.InfoWindow({
 							content: iwContent,
