--- a/public/test.html
+++ b/public/test.html
@@ -5,6 +5,14 @@
 	<meta charset="utf-8">
 	<title>마커 클러스터러 사용하기</title>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<style>
+		div {
+			width : 100px;
+			height: 200px;
+			padding: left;
+			border: 2px solid black;
+		}
+	</style>
 
 </head>
 
@@ -41,6 +49,7 @@
 		});
 
 	</script>
+
 </body>
 
 </html>
