--- a/public/test.html
+++ b/public/test.html
@@ -42,13 +42,13 @@
 		});
 
 	</script>
-	
+
 	<style>
 		div {
-			width: 200px;
-			height: 100px;
+			width: 30%;
+			height: 100%;
 			padding: left;
-			border: 2px solid black;
+			border: 1px solid black;
 		}
 	</style>
 
