--- a/public/test.html
+++ b/public/test.html
@@ -6,6 +6,33 @@
 	<title>마커 클러스터러 사용하기</title>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
+	<style>
+		.accordion {
+			background-color: #eee;
+			color: #444;
+			cursor: pointer;
+			padding: 18px;
+			width: 100%;
+			border: none;
+			text-align: left;
+			outline: none;
+			font-size: 15px;
+			transition: 0.4s;
+		}
+
+		.active,
+		.accordion:hover {
+			background-color: #ccc;
+		}
+
+		.panel {
+			padding: 0 18px;
+			display: none;
+			background-color: white;
+			overflow: hidden;
+		}
+	</style>
+
 </head>
 
 <body>
@@ -43,15 +70,27 @@
 
 	</script>
 
-	<style>
-		div {
-			width: 30%;
-			height: 100%;
-			padding: left;
-			border: 1px solid black;
-		}
-	</style>
+	<button class="accordion">근처 우체국</button>
+	<div class="panel">
+		<p>test</p>
+	</div>
+	<script>
+		var acc = document.getElementsByClassName("accordion");
+		var i;
 
+		for (i = 0; i < acc.length; i++) {
+			acc[i].addEventListener("click", function () {
+				this.classList.toggle("active");
+				var panel = this.nextElementSibling;
+				if (panel.style.display === "block") {
+					panel.style.display = "none";
+				} else {
+					panel.style.display = "block";
+				}
+			});
+		}
+	</script>
+	
 </body>
 
 </html>
