--- a/public/test.html
+++ b/public/test.html
@@ -18,6 +18,7 @@
 			outline: none;
 			font-size: 15px;
 			transition: 0.4s;
+			z-index: 2;
 		}
 
 		.active,
@@ -57,7 +58,6 @@
 						var marker_position = new kakao.maps.LatLng(position.lat, position.lng);
 						var marker = new kakao.maps.Marker({
 							map: map,
-							title: position.name,
 							position: marker_position
 						})
 					}
@@ -70,8 +70,8 @@
 
 	</script>
 
-	<button class="accordion">근처 우체국</button>
-	<div class="panel">
+	<button class="accordion" style="z-index:2" >근처 우체국</button>
+	<div class="panel" style="z-index:2">
 		<p>test</p>
 	</div>
 	<script>
@@ -90,7 +90,7 @@
 			});
 		}
 	</script>
-	
+
 </body>
 
 </html>
