--- a/public/test.html
+++ b/public/test.html
@@ -5,39 +5,10 @@
 	<meta charset="utf-8">
 	<title>마커 클러스터러 사용하기</title>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
-	<style>
-		.accordion {
-			background-color: #eee;
-			color: #444;
-			cursor: pointer;
-			padding: 18px;
-			width: 100%;
-			border: none;
-			text-align: left;
-			outline: none;
-			font-size: 15px;
-			transition: 0.4s;
-			z-index: 2;
-		}
-
-		.active,
-		.accordion:hover {
-			background-color: #ccc;
-		}
-
-		.panel {
-			padding: 0 18px;
-			display: none;
-			background-color: white;
-			overflow: hidden;
-		}
-	</style>
-
 </head>
 
 <body>
-	<div id="map" style="width:100%;height:350px;"></div>
+	<div id="map" style="width:100%;height: 100%;"></div>
 
 	<script type="text/javascript"
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
@@ -69,28 +40,6 @@
 		});
 
 	</script>
-
-	<button class="accordion" style="z-index:2" >근처 우체국</button>
-	<div class="panel" style="z-index:2">
-		<p>test</p>
-	</div>
-	<script>
-		var acc = document.getElementsByClassName("accordion");
-		var i;
-
-		for (i = 0; i < acc.length; i++) {
-			acc[i].addEventListener("click", function () {
-				this.classList.toggle("active");
-				var panel = this.nextElementSibling;
-				if (panel.style.display === "block") {
-					panel.style.display = "none";
-				} else {
-					panel.style.display = "block";
-				}
-			});
-		}
-	</script>
-
 </body>
 
 </html>
