--- a/public/test.html
+++ b/public/test.html
@@ -24,7 +24,7 @@
             dataType: "json",
             success: function (data) {
                 console.log(data.storeInfos)
-				$.each(data.position, function(i, position){
+				$.each(data.storeInfos, function(i, position){
 					var marker_position = new kakao.maps.LatLng(position.lat, position.lng)
 					var marker = new kakao.maps.LatLng({
 						map: map,
