--- a/public/test.html
+++ b/public/test.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>마커 클러스터러 사용하기</title>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
 </head>
 
 <body>
@@ -18,24 +19,26 @@
 			level: 14 // 지도의 확대 레벨 
 		});
 
-        $.ajax({
-            type: "GET",
-            url: "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/stores/json",
-            dataType: "json",
-            success: function (data) {
-                console.log(data.storeInfos)
-				$.each(data.storeInfos, function(i, position){
-					var marker_position = new kakao.maps.LatLng(position.lat, position.lng)
-					var marker = new kakao.maps.LatLng({
-						map: map,
-						position: marker_position
-					})
+		$.ajax({
+			type: "GET",
+			url: "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/stores/json",
+			dataType: "json",
+			success: function (data) {
+				$.each(data.storeInfos, function (i, position) {
+					if (position.type == "01") {
+						var marker_position = new kakao.maps.LatLng(position.lat, position.lng);
+						var marker = new kakao.maps.Marker({
+							map: map,
+							position: marker_position
+						})
+					}
 				})
-            },
-            error: function (xhr, status, error) {
-                console.log(error)
-            }
-        });
+			},
+			error: function (xhr, status, error) {
+				console.log(error)
+			}
+		});
+
 	</script>
 </body>
 
