--- a/public/test.html
+++ b/public/test.html
@@ -24,8 +24,10 @@
 			url: "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/stores/json",
 			dataType: "json",
 			success: function (data) {
+				console.log(data.storeInfos)
 				$.each(data.storeInfos, function (i, position) {
 					if (position.type == "01") {
+						console.log(position.type)
 						var marker_position = new kakao.maps.LatLng(position.lat, position.lng);
 						var marker = new kakao.maps.Marker({
 							map: map,
