--- a/public/test.html
+++ b/public/test.html
@@ -70,8 +70,8 @@
 
 	</script>
 
-	<button class="accordion" style="z-index:2">근처 우체국</button>
-	<div class="panel" style="z-index:2">
+	<button class="accordion">근처 우체국</button>
+	<div class="panel">
 		<p>test</p>
 	</div>
 	<script>
