--- a/public/test.html
+++ b/public/test.html
@@ -36,11 +36,10 @@
 </head>
 
 <body>
-	<div id="map" style="width:100%;height:350px;">
-		<button class="accordion">근처 우체국</button>
-		<div class="panel">
-			<p>test</p>
-		</div>
+	<div id="map" style="width:100%;height:350px;"></div>
+	<button class="accordion">근처 우체국</button>
+	<div class="panel">
+		<p>test</p>
 	</div>
 
 	<script type="text/javascript"
