--- a/public/test.html
+++ b/public/test.html
@@ -11,7 +11,7 @@
 			color: #444;
 			cursor: pointer;
 			padding: 18px;
-			width: 100%;
+			width: 20%;
 			border: none;
 			text-align: left;
 			outline: none;
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-	<div id="map" style="width:100%;height:350px;"></div>
+	<div id="map" style="width:100%;height:100%;"></div>
 	<button class="accordion">근처 우체국</button>
 	<div class="panel">
 		<p>test</p>
