--- a/public/test.html
+++ b/public/test.html
@@ -37,10 +37,6 @@
 
 <body>
 	<div id="map" style="width:100%;height:100%;"></div>
-	<button class="accordion">근처 우체국</button>
-	<div class="panel">
-		<p>test</p>
-	</div>
 
 	<script type="text/javascript"
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
@@ -73,6 +69,11 @@
 		});
 
 	</script>
+
+	<!-- <button class="accordion">근처 우체국</button>
+	<div class="panel">
+		<p>test</p>
+	</div> -->
 
 	<script>
 		var acc = document.getElementsByClassName("accordion");
