--- a/public/test.html
+++ b/public/test.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-	<div id="map" style="width:100%;height:100%;"></div>
+	<div id="map" style="width:100%;height:100%; position: relative;"></div>
 
 	<script type="text/javascript"
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
