--- a/public/test.html
+++ b/public/test.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-	<div id="map" style="width:100%;height:100%; position: relative;"></div>
+	<div id="map" style="width: 500px ;height:500px; position: relative;"></div>
 
 	<script type="text/javascript"
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
@@ -70,10 +70,10 @@
 
 	</script>
 
-	<!-- <button class="accordion">근처 우체국</button>
+	<button class="accordion">근처 우체국</button>
 	<div class="panel">
 		<p>test</p>
-	</div> -->
+	</div>
 
 	<script>
 		var acc = document.getElementsByClassName("accordion");
