--- a/public/test.html
+++ b/public/test.html
@@ -60,6 +60,9 @@
 							map: map,
 							position: marker_position
 						})
+						var button = document.createElement("button");
+						button.className = "accordion"
+						button.innerHTML(position.name)
 					}
 				})
 			},
