--- a/public/test.html
+++ b/public/test.html
@@ -62,7 +62,7 @@
 						})
 						var button = document.createElement("button");
 						button.className = "accordion"
-						button.innerHTML(position.name)
+						button.innerHTML = position.name;
 					}
 				})
 			},
