--- a/public/test.html
+++ b/public/test.html
@@ -60,10 +60,20 @@
 							map: map,
 							position: marker_position
 						})
-						var button = document.createElement("button");
-						button.className = "accordion"
-						button.style = "z-index:2";
-						button.innerHTML = position.name;
+						var iwContent = '<div style="padding:5px;">Hello World!</div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+							iwRemoveable = true; // removeable 속성을 ture 로 설정하면 인포윈도우를 닫을 수 있는 x버튼이 표시됩니다
+
+						// 인포윈도우를 생성합니다
+						var infowindow = new kakao.maps.InfoWindow({
+							content: iwContent,
+							removable: iwRemoveable
+						});
+
+						// 마커에 클릭이벤트를 등록합니다
+						kakao.maps.event.addListener(marker, 'click', function () {
+							// 마커 위에 인포윈도우를 표시합니다
+							infowindow.open(map, marker);
+						});
 					}
 				})
 			},
@@ -79,7 +89,7 @@
 		<p>test</p>
 	</div> -->
 
-	<script>
+	<!-- <script>
 		var acc = document.getElementsByClassName("accordion");
 		var i;
 
@@ -94,7 +104,7 @@
 				}
 			});
 		}
-	</script>
+	</script> -->
 </body>
 
 </html>
