--- a/public/test.html
+++ b/public/test.html
@@ -60,7 +60,7 @@
 							map: map,
 							position: marker_position
 						})
-						var iwContent = '<div style="padding:5px;">Hello World!</div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+						var iwContent = '<div style="padding:5px;">position.name</div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
 							iwRemoveable = true; // removeable 속성을 ture 로 설정하면 인포윈도우를 닫을 수 있는 x버튼이 표시됩니다
 
 						// 인포윈도우를 생성합니다
