--- a/public/test.html
+++ b/public/test.html
@@ -5,6 +5,21 @@
 	<meta charset="utf-8">
 	<title>마커 클러스터러 사용하기</title>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script>
+		if (navigator.geolocation) {
+
+			// GeoLocation을 이용해서 접속 위치를 얻어옵니다
+			navigator.geolocation.getCurrentPosition(function (position) {
+
+				var lat = position.coords.latitude, // 위도
+					lon = position.coords.longitude; // 경도
+
+				var locPosition = new kakao.maps.LatLng(lat, lon) // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
+					display(locPosition);
+			});
+
+		}
+	</script>
 
 </head>
 
@@ -15,19 +30,6 @@
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
 	<script>
 
-		if (navigator.geolocation) {
-
-			// GeoLocation을 이용해서 접속 위치를 얻어옵니다
-			navigator.geolocation.getCurrentPosition(function (position) {
-
-				var lat = position.coords.latitude, // 위도
-					lon = position.coords.longitude; // 경도
-
-				var locPosition = new kakao.maps.LatLng(lat, lon) // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
-				display(locPosition);
-			});
-
-		}
 		function display(locPosition) {
 			var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
 				center: new kakao.maps.LatLng(locPosition), // 지도의 중심좌표 
