--- a/public/test.html
+++ b/public/test.html
@@ -15,7 +15,7 @@
 	<script>
 
 		var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
-			center: new kakao.maps.LatLng(locPosition), // 지도의 중심좌표 
+			center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표 
 			level: 14 // 지도의 확대 레벨 
 		});
 		$.ajax({
