--- a/public/test.html
+++ b/public/test.html
@@ -54,7 +54,8 @@
 									lon = position.coords.longitude; // 경도
 
 								var locPosition = new kakao.maps.LatLng(lat, lon) // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
-								map.center(locPosition)
+								map.panTo(locPosition);
+								map.setLevel(5);
 
 							});
 
