--- a/public/test.html
+++ b/public/test.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<div id="map" style="width: 500px ;height:500px; position: relative; z-index: 1;"></div>
+	<div id="map" style="width: 100% ;height:100%; position: absolute; z-index: 1;"></div>
 
 	<script type="text/javascript"
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
