--- a/public/test2.html
+++ b/public/test2.html
@@ -1,5 +1,4 @@
 <head>
-    test
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
         if (navigator.geolocation) {
@@ -43,11 +42,12 @@
                 success: function (data) {
                     $.each(data.stores, function (i, stores) {
                         var name = stores.name;
-                        var status = stores.remain_stat
+                        var stauts = stores.remain_stat
+                        var remain = ""
                         if(status == "empy"){
-                            status = "품절"
+                            reamin = "품절"
                         }else if(status == null){
-                            status = "정보 없음"
+                            reamain = "정보 없음"
                         }
                         var position = new kakao.maps.LatLng(stores.lat, stores.lng);
                         var marker = new kakao.maps.Marker({
