--- a/public/test2.html
+++ b/public/test2.html
@@ -43,7 +43,7 @@
                 success: function (data) {
                     $.each(data.stores, function (i, stores) {
                         var name = stores.name;
-                        var stauts = stores.remain_stat
+                        var status = stores.remain_stat
                         var remain = ""
                         if (status == "empty") {
                             reamin = "품절"
