--- a/public/test2.html
+++ b/public/test2.html
@@ -17,6 +17,7 @@
             center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표 
             level: 3 // 지도의 확대 레벨 
         });
+
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function (position) {
 
@@ -33,6 +34,16 @@
 
         function pharmacy(lat, lng) {
             var my_loc = new kakao.maps.LatLng(lat, lng);
+            var imageSrc = '/images/my_loc.jpg', // 마커이미지의 주소입니다    
+                imageSize = new kakao.maps.Size(64, 69), // 마커이미지의 크기입니다
+                imageOption = { offset: new kakao.maps.Point(27, 69) }; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
+
+            // 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
+            var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption)
+            var marker = new kakao.maps.Marker({
+                map: map,
+                position: my_loc
+            })
             map.panTo(my_loc);
             var loc = "?lat=" + lat + "&lng=" + lng + "&m=5000";
             var url = "https://8oi9s0nnth.apigw.ntruss.com/corona19-masks/v1/storesByGeo/json" + loc
@@ -50,7 +61,7 @@
                             reamin = "품절"
                         } else if (status == null) {
                             reamain = "정보 없음"
-                        }else{
+                        } else {
                             remain = status;
                         }
                         var position = new kakao.maps.LatLng(stores.lat, stores.lng);
