--- a/public/test2.html
+++ b/public/test2.html
@@ -55,14 +55,17 @@
                     $.each(data.stores, function (i, stores) {
                         var name = stores.name;
                         var status = stores.remain_stat
-                        status = status.toString();
+                        console.log(status)
                         var remain;
                         if (status == "empty") {
                             reamin = "품절"
+                            console.log(remain)
                         } else if (status == null) {
                             reamain = "정보 없음"
+                            console.log(remain)
                         } else {
                             remain = status;
+                            console.log(remain)
                         }
                         var position = new kakao.maps.LatLng(stores.lat, stores.lng);
                         var marker = new kakao.maps.Marker({
