--- a/public/test2.html
+++ b/public/test2.html
@@ -58,10 +58,10 @@
                         console.log(status)
                         var remain;
                         if (status == "empty") {
-                            reamin = "품절"
+                            remain = "품절"
                             console.log(remain)
                         } else if (status == null) {
-                            reamain = "정보 없음"
+                            remain = "정보 없음"
                             console.log(remain)
                         } else {
                             remain = status;
