--- a/public/test2.html
+++ b/public/test2.html
@@ -13,11 +13,6 @@
 
     <script>
 
-        var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
-            center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표 
-            level: 3 // 지도의 확대 레벨 
-        });
-
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function (position) {
 
@@ -34,6 +29,12 @@
 
         function pharmacy(lat, lng) {
             var my_loc = new kakao.maps.LatLng(lat, lng);
+
+            var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
+                center: my_loc, // 지도의 중심좌표 
+                level: 2 // 지도의 확대 레벨 
+            });
+
             var imageSrc = '/images/my_loc.jpg', // 마커이미지의 주소입니다    
                 imageSize = new kakao.maps.Size(64, 69), // 마커이미지의 크기입니다
                 imageOption = { offset: new kakao.maps.Point(27, 69) }; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
