--- a/public/test2.html
+++ b/public/test2.html
@@ -13,7 +13,7 @@
 
     <script>
         var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
-            center: my_loc, // 지도의 중심좌표 
+            center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표 
             level: 2 // 지도의 확대 레벨 
         });
 
